buildscript {
	ext {
		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
	}
	repositories {
		mavenCentral()
		maven { url "https://repo.spring.io/snapshot" }
		maven { url "https://repo.spring.io/milestone" }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'war'

//applicationDefaultJvmArgs = ["--add-modules java.se.ee"]

group = 'my.webservice.books'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/snapshot" }
	maven { url "https://repo.spring.io/milestone" }
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-hateoas')
//	compile('org.springframework.boot:spring-boot-starter-security')
//	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
	compile('org.springframework.boot:spring-boot-starter-web')
	compile('org.springframework.boot:spring-boot-starter-data-jpa')
	compile('org.springframework.data:spring-data-rest-core')
//	compile('postgresql:postgresql')
	compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
//	compile group: 'javax', name: 'javaee-api', version: '8.0'
	compile group: 'com.h2database', name: 'h2', version: '1.4.196'
	testCompile('org.springframework.boot:spring-boot-starter-test')
	testCompile('org.springframework.security:spring-security-test')
}
